# hsmarc

./: LICENSE  README.md  hsmarc.cabal
src/Data/: Marc21.hs
src/Data/Marc21/: Constants.hs  Convenience.hs  Mnem.hs  MnemText21.hs
